--- a/recipes/chicken_salad.html
+++ b/recipes/chicken_salad.html
@@ -6,8 +6,11 @@
         <title>Chicken Salad</title>
     </head>
 
+
     <body>
         <h1>Chicken Salad</h1>
     
+        <a href="../index.html">Home</a>
+
     </body>
 </html>
