--- a/recipes/chicken_salad.html
+++ b/recipes/chicken_salad.html
@@ -10,7 +10,19 @@
     <body>
         <h1>Chicken Salad</h1>
     
-        <a href="../index.html">Home</a>
+            <p><a href="../index.html">Home</a></p>
+
+            <img
+                src="../images/chickensalad.jpg" alt="delicious chicken salad in a bowl with crackers scattered around" height="450" width="550">
+
+        <h3>Description</h3>
+            <p>This creamy chicken salad recipe is <strong>the best</strong> and a family favorite! 
+                Everyone needs <strong>this best chicken salad recipe</strong> in their collection!</p> 
+                
+            <p>This creamy homemade chicken salad is quick and easy to make. 
+                With just a handful of everyday ingredients to make - it's perfect for warm weather picnics ,lunches or light dinners.</p>
+
+
 
     </body>
 </html>
