Create ingredients list& add to chicken_salad.html
Created an unorganised list of ingredients separating by paragraph,
so it would be better seen and would not blend together. Edit commit message(typo) corrected

--- a/recipes/chicken_salad.html
+++ b/recipes/chicken_salad.html
@@ -22,6 +22,16 @@
             <p>This creamy homemade chicken salad is quick and easy to make. 
                 With just a handful of everyday ingredients to make - it's perfect for warm weather picnics ,lunches or light dinners.</p>
 
+        <h3>Ingredients</h3>
+            <ul>
+               <p><li>½ cup blanched slivered almonds</li></p>
+                <p><li>½ cup mayonnaise</li></p>
+                <p><li>1 tablespoon lemon juice</li></p>
+                <p><li>¼ teaspoon ground black pepper</li></p>
+                <p><li>2 cups chopped, cooked chicken meat</li></p>
+                <p><li>1 rib celery, chopped</li></p>
+            </ul>
+
 
 
     </body>
