Create organised list & add to chicken_salad.html
Created an organised "Steps" list with instructions how to make the salad step by step.
This is all seperated by paragraphs for a better overview of the instructions.

--- a/recipes/chicken_salad.html
+++ b/recipes/chicken_salad.html
@@ -32,7 +32,15 @@
                 <p><li>1 rib celery, chopped</li></p>
             </ul>
 
-
+            
+        <h3>Steps</h3>
+            <ol>
+                <p><li>Place almonds in a frying pan. 
+                    Toast over medium-high heat, shaking frequently. Watch carefully, as they burn easily.</li></p>
+                <p><li>Mix together mayonnaise, lemon juice, and pepper in a medium bowl.</li></p>
+                <p><li>Toss the chicken, toasted almonds, celery and your mixed mayonnaise together.</li></p>
+                <p><li><em>Enjoy</em> your quick and easy salad!</li></p>
+            </ol>
 
     </body>
 </html>
