--- a/recipes/tomato_soup.html
+++ b/recipes/tomato_soup.html
@@ -9,9 +9,11 @@
     <body>
         <h1>Creamy Tomato Basil Soup</h1>
 
-        <p><a href="../index.html">Home</a></p>
+         <p><a href="../index.html">Home</a></p>
 
-
+        <img
+            src="../images/tomatosoup.jpg" alt="two bowls of creamy tomato soup with basil leaf inside" height="450" width="550">
+      
 
 
     </body>
