--- a/recipes/tomato_soup.html
+++ b/recipes/tomato_soup.html
@@ -14,7 +14,11 @@
         <img
             src="../images/tomatosoup.jpg" alt="two bowls of creamy tomato soup with basil leaf inside" height="450" width="550">
       
+        <h3>Description</h3>
 
+            <p><em>This is a simple, yet tasty</em> creamy tomamto basil soup for you to try!</p>
+            <p>This tomato basil soup uses real butter, fresh basil, and heavy cream, which are the secrets to the richness of this soup.</p>
+            <p>This soup recipe features <strong> fresh ingredients, a decadent texture, and tons of flavor.</strong></p> 
 
     </body>
 </html>
