Edit tomato_soup.html add ingredients list
Made an unorganised list of ingredients for the soup recipe.
Used <p> element to separate each line for better overview.

--- a/recipes/tomato_soup.html
+++ b/recipes/tomato_soup.html
@@ -18,7 +18,18 @@
 
             <p><em>This is a simple, yet tasty</em> creamy tomamto basil soup for you to try!</p>
             <p>This tomato basil soup uses real butter, fresh basil, and heavy cream, which are the secrets to the richness of this soup.</p>
-            <p>This soup recipe features <strong> fresh ingredients, a decadent texture, and tons of flavor.</strong></p> 
+            <p>This soup recipe features <strong> fresh ingredients, a decadent texture, and tons of flavor.</strong></p>
+            
+        <h3>Ingredients</h3>
+
+            <ul>
+               <p><li>4 medium ripe tomatoes - peeled, seeded and diced</li></p>
+               <p><li>4 cups tomato juice</li></p>
+               <p><li>14 leaves fresh basil</li></p>
+               <p><li>1 cup heavy whipping cream</li></p>
+               <p><li>½ cup butter</li></p>
+               <p><li>salt and pepper to taste</li></p>
+            </ul>
 
     </body>
 </html>
