Edit tomato_soup.html add steps list
Made an organised list of steps for the tomato soup recipe to follow.
Separated the steps by <p> element for better overview.

--- a/recipes/tomato_soup.html
+++ b/recipes/tomato_soup.html
@@ -31,5 +31,20 @@
                <p><li>salt and pepper to taste</li></p>
             </ul>
 
+        <h3>Steps</h3>
+
+            <ol>
+              <p><li>Gather all ingredients.</li></p>
+              <p><li>Place tomatoes and juice in a stockpot over medium heat; bring to a simmer. 
+                    Cook until tomatoes have softened, about 30 minutes.</li></p>
+              <p><li>Remove the pot from heat. Add basil leaves to the pot.</li></p>
+              <p><li>Use an immersion blender to purée soup until smooth.</li></p>
+              <p><li>Stir in heavy cream and butter. Cook and stir over medium heat until butter is melted, about 5 minutes. 
+                    Do not boil. Season with salt and pepper.</li></p>
+              <p><li>Serve hot and enjoy!</li></p>
+            </ol>
+
+
+
     </body>
 </html>
