Edit index.html and eton_mess.html add link
Added a relative link from index.html to eton_mess.html and a link back to the index.html page.
Creating an easier navigation between the pages.

--- a/recipes/eton_mess.html
+++ b/recipes/eton_mess.html
@@ -9,6 +9,10 @@
     <body>
 
         <h1>Eton Mess</h1>
+
+         <p><a href="../index.html">Home</a></p>
+
+         
         
     </body>
 </html>
