--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <a href="recipes/chicken_salad.html">Chicken Salad</a>
 
         <a href="recipes/tomato_soup.html">Tomato Soup</a>
+
+        <a href="recipes/eton_mess.html">Eton Mess</a>
     
     
     </body>
