Edit eton_mess.html add etonmess.jpg
Added etonmess.jpg to the eton_mess.html.
A picture of the dessert added for a better visual representation of the recipe outcome.

--- a/recipes/eton_mess.html
+++ b/recipes/eton_mess.html
@@ -12,7 +12,8 @@
 
          <p><a href="../index.html">Home</a></p>
 
-         
+         <img
+            src="../images/etonmess.jpg" alt="a fruity dessert in a small, glass dessert cup" height="450" width="450">
         
     </body>
 </html>
