Edit eton_mess.html add ingredients list
Made an unorganised list of required ingredients for the recipe.
Separated by paragraphs for better overview

--- a/recipes/eton_mess.html
+++ b/recipes/eton_mess.html
@@ -20,6 +20,17 @@
             <p>This is a <em>delicious</em> version of Eton Mess with chopped Spanish persimmons, crushed raspberries and pomegranate seeds, whipped cream and broken meringues. <strong>Yum!</strong></p>
             <p>You can make these lovely desserts 3 to 4 hours before you need them.</p>
 
+        <h3>Ingredients</h3>
+
+            <ul>
+                <p><li>2 medium Spanish persimmons</li></p>
+                <p><li>2 cups fresh raspberries</li></p>
+                <p><li>½ cup pomegranate, seeds only, or more to taste</li></p>
+                <p><li>1 ¼ cups heavy cream</li></p>
+                <p><li>8 small plain meringue cookies, coarsely crushed</li></p>
+            </ul>
+
+
 
     </body>
 </html>
