Edit eton_mess.html create a steps list
Created an organised list of "steps" to follow in the recipe.
All separated by paragraphs for better overview.

--- a/recipes/eton_mess.html
+++ b/recipes/eton_mess.html
@@ -30,6 +30,19 @@
                 <p><li>8 small plain meringue cookies, coarsely crushed</li></p>
             </ul>
 
+        <h3>Steps</h3>
+
+            <ol>
+                <p><li>Remove the leafy tops from the persimmons, slice the flesh, and add to a large bowl. 
+                    Crush the raspberries lightly with a fork and add these to the bowl with the pomegranate seeds. 
+                    Stir gently to combine.</li></p>
+                <p><li>Beat cream in a chilled glass or metal bowl with an electric mixer until firm peaks form. 
+                    Fold in meringue and stir gently.</li></p>
+                <p><li>Spoon some of the fruit mixture into 4 decorative glasses. Layer the cream and meringue mixture on top, alternating with the fruit mixture. 
+                    Make sure you reserve a little fruit for the top.</li></p>
+                <p><li><strong>Then serve and enjoy!</strong></li></p>
+            </ol>
+
 
 
     </body>
